tests/models/struct/unnamed/isize/fail/validate.rs
use dade::{model, Result};
#[model]
struct TestModel (
   #[field(validate = validate_fn)]
    isize
);
fn main() {}
